--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block body%}
+<div class="container">
 <div class="content">
     <h1 style="text-align: center">Todo List</h1>
         <div class="form" >
@@ -17,7 +18,6 @@
              <table>
         <tr>
             <th>Task</th>
-            <th>Added</th>
             <th>Actions</th>
         </tr>
                 <tr>
@@ -37,7 +37,6 @@
                     <table>
         <tr>
             <th>Task</th>
-            <th>Added</th>
             <th>Actions</th>
         </tr>
                     {% for todo in complete %}
@@ -55,6 +54,7 @@
                                             </table>
 
 
+    </div>
     </div>
     </div>
 {% endblock %}
