--- a/templates/update.html
+++ b/templates/update.html
@@ -4,7 +4,7 @@
             <h1 style="text-align: center">Update Task</h1>
         <div class="form">
         <form action="{{ url_for('update', id=todo.id) }}" method="POST">
-            Type<input type="text" name="todotext" value="{{todo.id}}">
+            <input type="text" name="todotext" value="{{todo.id}}">
             <input type="submit" value="Update">
         </form>
     </div>
