--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+   
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <title>Todo App</title>
+    {% block head%}
+    {% endblock %}
 </head>
 <body>
     {% block body%}
