--- a/templates/update.html
+++ b/templates/update.html
@@ -1,4 +1,7 @@
 {% extends 'base.html'%}
+{% block head%}
+    <title>Update</title>
+{% endblock %}
 {% block body %}        
         <div class="content">
             <h1 style="text-align: center">Update Task</h1>
